# sdl3-template-master-1

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md
application/: CMakeLists.txt
application/src/: main.c  settings.h
application/src/common/: assets.c  assets.h  common.h  ui_style.c  ui_style.h
application/src/game/: game_config.c  game_config.h  game_graphics.c  game_graphics.h  input.c  input.h  scene.c  scene.h
application/src/game/core/: game_core.c  game_core.h
application/src/game/ui/: game_settings_page.c  game_settings_page.h  game_title_page.c  game_title_page.h  game_ui_manager.c  game_ui_manager.h
assets_dev/atlas/: jump_in_desc.json  ui_base_desc.json
docs/: ui_guide_fr.md
engine/: CMakeLists.txt
engine/src/: game_engine.h  game_engine_common.c  game_engine_common.h  game_engine_settings.h
engine/src/core/: asset_manager.c  asset_manager.h  camera.c  camera.h  renderer.c  renderer.h  sprite_anim.c  sprite_anim.h  sprite_sheet.c  sprite_sheet.h  timer.c  timer.h
engine/src/ui/: ui_button.c  ui_button.h  ui_canvas.c  ui_canvas.h  ui_fill_rect.c  ui_fill_rect.h  ui_focus_manager.c  ui_focus_manager.h  ui_grid_layout.c  ui_grid_layout.h  ui_image.c  ui_image.h  ui_input.c  ui_input.h  ui_label.c  ui_label.h  ui_list.c  ui_list.h  ui_object.c  ui_object.h  ui_selectable.c  ui_selectable.h  ui_utils.c  ui_utils.h
engine/src/utils/: colors.c  colors.h  utils.c  utils.h
